[package]
name = "bevy-bird"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1

[dependencies]
bevy = { version = "0.9.1", features = ["dynamic"] }
bevy-inspector-egui = "0.15.0"
bevy_rapier2d = { version = "0.19.0", features = [
    "simd-stable",
    "debug-render",
] }
bevy_tweening = "0.6.0"
iyes_loopless = { version = "0.9.1", features = ["bevy-inspector-egui"] }
rand = "0.8.5"
